--- a/OHWR/res/layout/get_mode.xml
+++ b/OHWR/res/layout/get_mode.xml
@@ -10,7 +10,8 @@
         android:id="@+id/class_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/addClass" />
+        android:text="@string/addClass"
+        android:visibility="gone" />
     <Button
         android:id="@+id/data_button"
         android:layout_width="wrap_content"
